k8s/apps/media/jellyfin/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`media.armleth.fr`)
      kind: Rule
      services:
        - name: jellyfin-service
          port: 8096
  tls:
    secretName: media-tls-secret
